[tool.poetry]
name = "audio-slicer-v2"
version = "0.1.0"
description = ""
authors = ["Tundra Work <tundrawork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
cffi = "^1.16.0"
contourpy = "^1.2.0"
cycler = "^0.12.1"
fonttools = "^4.46.0"
importlib-resources = "^6.1.1"
kiwisolver = "^1.4.5"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
packaging = "^23.2"
pillow = "^10.1.0"
pycparser = "^2.21"
pyparsing = "^3.1.1"
pyside6 = "^6.6.1"
pyside6-addons = "^6.6.1"
pyside6-essentials = "^6.6.1"
python-dateutil = "^2.8.2"
shiboken6 = "^6.6.1"
six = "^1.16.0"
soundfile = "^0.12.1"
zipp = "^3.17.0"
pyinstaller = "^6.2.0"
scipy = "^1.11.4"
resampy = "^0.4.2"
samplerate = "^0.1.0"
soxr = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
